--- a/voiceting/privacy/index.html
+++ b/voiceting/privacy/index.html
@@ -15,30 +15,40 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <style>
-        body { font-family: 'Noto Sans KR', sans-serif; background: #0F0A1E; color: #E2E8F0; }
-        h2 { color: #A78BFA; margin-top: 2rem; margin-bottom: 0.75rem; font-weight: 600; font-size: 1.1rem; }
-        p, li { color: #CBD5E1; line-height: 1.8; }
+        * { box-sizing: border-box; }
+        body { font-family: 'Noto Sans KR', sans-serif; background: #ffffff; color: #2d1b1b; -webkit-font-smoothing: antialiased; }
+        h2 { color: #e63946; margin-top: 2rem; margin-bottom: 0.75rem; font-weight: 700; font-size: 1rem; }
+        p, li { color: #8b6b6b; line-height: 1.8; }
         li { margin-bottom: 0.25rem; }
+        strong { color: #2d1b1b; }
         table { width: 100%; border-collapse: collapse; margin: 1rem 0; font-size: 0.875rem; }
-        th { background: #1A1035; color: #A78BFA; padding: 10px 14px; text-align: left; border: 1px solid #2D2550; }
-        td { padding: 10px 14px; border: 1px solid #2D2550; color: #CBD5E1; vertical-align: top; }
+        th { background: #fff0f0; color: #e63946; padding: 10px 14px; text-align: left; border: 1px solid rgba(230,57,70,0.15); font-weight: 600; }
+        td { padding: 10px 14px; border: 1px solid rgba(230,57,70,0.12); color: #8b6b6b; vertical-align: top; }
+        a { color: #e63946; }
+        a:hover { text-decoration: underline; }
     </style>
 </head>
 <body>
     <!-- Header -->
-    <header class="border-b border-white/5 py-4 px-6 mb-8">
-        <div class="max-w-3xl mx-auto flex items-center gap-3">
-            <a href="../" class="flex items-center gap-2 text-purple-400 hover:text-purple-300 transition-colors text-sm">
+    <header class="border-b border-rose-100 bg-white/90 backdrop-blur-md py-4 px-6 mb-8">
+        <div class="max-w-3xl mx-auto flex items-center justify-between">
+            <a href="../" class="flex items-center gap-2 text-primary hover:opacity-70 transition-opacity text-sm font-medium" style="color:#e63946">
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M15 18l-6-6 6-6"/></svg>
                 보이스팅 홈
             </a>
+            <div class="flex items-center gap-2">
+                <div class="w-6 h-6 rounded-lg flex items-center justify-center" style="background:#e63946">
+                    <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2.5"><path d="M12 2a3 3 0 0 0-3 3v7a3 3 0 0 0 6 0V5a3 3 0 0 0-3-3z"/><path d="M19 10v2a7 7 0 0 1-14 0v-2"/><line x1="12" y1="19" x2="12" y2="22"/></svg>
+                </div>
+                <span class="font-bold text-sm" style="color:#2d1b1b">보이스팅</span>
+            </div>
         </div>
     </header>
 
     <main class="max-w-3xl mx-auto px-6 pb-20">
-        <div class="mb-8">
-            <h1 class="text-3xl font-bold text-white mb-2">개인정보처리방침</h1>
-            <p class="text-white/40 text-sm">보이스팅 개인정보처리방침 · 시행일: 2025년 1월 1일 · 최종 수정일: 2025년 6월 1일</p>
+        <div class="mb-8 pb-6 border-b border-rose-100">
+            <h1 class="text-3xl font-bold mb-2" style="color:#2d1b1b">개인정보처리방침</h1>
+            <p class="text-sm" style="color:#8b6b6b">보이스팅 개인정보처리방침 · 시행일: 2025년 1월 1일 · 최종 수정일: 2025년 6월 1일</p>
         </div>
 
         <p>dcode labs(이하 "회사")는 보이스팅 앱(이하 "서비스")을 운영하면서 이용자의 개인정보를 소중히 여기며, 「개인정보 보호법」 및 관련 법령을 준수하기 위해 다음과 같이 개인정보처리방침을 수립하고 공개합니다.</p>
@@ -88,7 +98,7 @@
             </tbody>
         </table>
 
-        <p><strong class="text-white/80">수집 방법:</strong> 앱 내 회원가입 시 이용자 직접 입력, 서비스 이용 중 자동 수집</p>
+        <p><strong>수집 방법:</strong> 앱 내 회원가입 시 이용자 직접 입력, 서비스 이용 중 자동 수집</p>
 
         <h2>제2조 (개인정보의 이용 목적)</h2>
         <p>수집한 개인정보는 다음 목적으로만 이용합니다.</p>
@@ -104,9 +114,9 @@
         <h2>제3조 (개인정보의 보유 및 이용 기간)</h2>
         <p>회사는 개인정보 수집 목적이 달성된 후 해당 정보를 지체 없이 파기합니다. 단, 관계 법령에 따라 일정 기간 보존이 필요한 경우 해당 기간 동안 보관합니다.</p>
         <ul class="list-disc list-inside space-y-1 ml-2">
-            <li><strong class="text-white/80">전자상거래 계약 및 청약 철회 기록:</strong> 5년 (전자상거래법)</li>
-            <li><strong class="text-white/80">소비자 불만 및 분쟁 처리 기록:</strong> 3년 (전자상거래법)</li>
-            <li><strong class="text-white/80">통신 비밀 보호를 위한 통신 사실 확인 자료:</strong> 3개월 (통신비밀보호법)</li>
+            <li><strong>전자상거래 계약 및 청약 철회 기록:</strong> 5년 (전자상거래법)</li>
+            <li><strong>소비자 불만 및 분쟁 처리 기록:</strong> 3년 (전자상거래법)</li>
+            <li><strong>통신 비밀 보호를 위한 통신 사실 확인 자료:</strong> 3개월 (통신비밀보호법)</li>
         </ul>
 
         <h2>제4조 (개인정보의 제3자 제공)</h2>
@@ -146,13 +156,13 @@
             <li>개인정보 처리 정지 요청</li>
             <li>회원 탈퇴 (계정 삭제)</li>
         </ul>
-        <p class="mt-3">권리 행사는 앱 내 설정 메뉴 또는 이메일(<a href="mailto:iyu974895@gmail.com" class="text-purple-400 hover:underline">iyu974895@gmail.com</a>)을 통해 요청하실 수 있습니다. 회사는 요청 접수 후 10일 이내에 처리합니다.</p>
+        <p class="mt-3">권리 행사는 앱 내 설정 메뉴 또는 이메일(<a href="mailto:iyu974895@gmail.com">iyu974895@gmail.com</a>)을 통해 요청하실 수 있습니다. 회사는 요청 접수 후 10일 이내에 처리합니다.</p>
 
         <h2>제7조 (개인정보의 파기 절차 및 방법)</h2>
         <p>회사는 개인정보 보유 기간이 경과하거나 처리 목적이 달성된 경우 다음 방법으로 개인정보를 파기합니다.</p>
         <ul class="list-disc list-inside space-y-1 ml-2">
-            <li><strong class="text-white/80">전자적 파일 형태:</strong> 복구 및 재생이 불가능한 방법으로 영구 삭제</li>
-            <li><strong class="text-white/80">종이 문서:</strong> 분쇄 또는 소각</li>
+            <li><strong>전자적 파일 형태:</strong> 복구 및 재생이 불가능한 방법으로 영구 삭제</li>
+            <li><strong>종이 문서:</strong> 분쇄 또는 소각</li>
         </ul>
         <p class="mt-2">음성 메시지는 발송 후 6일이 경과하면 자동으로 서버에서 삭제됩니다.</p>
 
@@ -180,7 +190,7 @@
                 </tr>
                 <tr>
                     <td>이메일</td>
-                    <td><a href="mailto:iyu974895@gmail.com" class="text-purple-400 hover:underline">iyu974895@gmail.com</a></td>
+                    <td><a href="mailto:iyu974895@gmail.com">iyu974895@gmail.com</a></td>
                 </tr>
             </tbody>
         </table>
@@ -197,7 +207,7 @@
             <li>경찰청 사이버안전국: cyberbureau.police.go.kr / 국번 없이 182</li>
         </ul>
 
-        <div class="mt-12 pt-8 border-t border-white/10 text-white/30 text-sm">
+        <div class="mt-12 pt-8 border-t border-rose-100 text-sm" style="color:#8b6b6b">
             <p>시행일: 2025년 1월 1일</p>
             <p class="mt-1">© 2025 dcode labs. 보이스팅</p>
         </div>
