--- a/launchcrew/privacy/index.html
+++ b/launchcrew/privacy/index.html
@@ -19,11 +19,13 @@
         p, li { color: #4B5563; line-height: 1.8; }
         li { margin-bottom: 0.25rem; }
         strong { color: #1E1B4B; }
-        table { width: 100%; border-collapse: collapse; margin: 1rem 0; font-size: 0.875rem; }
-        th { background: #EEF2FF; color: #4F46E5; padding: 10px 14px; text-align: left; border: 1px solid rgba(79,70,229,0.15); font-weight: 600; font-family: 'Outfit', sans-serif; }
-        td { padding: 10px 14px; border: 1px solid rgba(79,70,229,0.1); color: #4B5563; vertical-align: top; }
         a { color: #4F46E5; }
         a:hover { text-decoration: underline; }
+        .section-box { background: #F5F3FF; border-left: 3px solid #4F46E5; border-radius: 0 0.5rem 0.5rem 0; padding: 1rem 1.25rem; margin: 1rem 0; }
+        table { width: 100%; border-collapse: collapse; margin: 1rem 0; font-size: 0.875rem; }
+        th { background: #EEF2FF; color: #1E1B4B; font-family: 'Outfit', sans-serif; font-weight: 600; padding: 0.625rem 0.875rem; text-align: left; border: 1px solid #E0E7FF; }
+        td { padding: 0.625rem 0.875rem; border: 1px solid #E0E7FF; color: #4B5563; vertical-align: top; line-height: 1.6; }
+        tr:nth-child(even) td { background: #F9F8FF; }
     </style>
 </head>
 <body>
@@ -48,7 +50,9 @@
             <p class="text-sm" style="color: #6B7280">Launchcrew 개인정보처리방침 · 시행일: 2025년 1월 1일 · 최종 수정일: 2025년 6월 1일</p>
         </div>
 
-        <p>dcode labs(이하 "회사")는 Launchcrew 앱(이하 "서비스")을 운영하면서 이용자의 개인정보를 소중히 여기며, 「개인정보 보호법」 및 관련 법령을 준수하기 위해 다음과 같이 개인정보처리방침을 수립하고 공개합니다.</p>
+        <div class="section-box">
+            <p class="text-sm"><strong>이용자의 개인정보를 소중히 여깁니다.</strong> dcode labs(이하 "회사")는 「개인정보 보호법」을 준수하며, 이용자의 개인정보가 어떻게 수집·이용·보호되는지 아래에 투명하게 안내합니다.</p>
+        </div>
 
         <h2>제1조 (수집하는 개인정보 항목 및 수집 방법)</h2>
         <p>회사는 서비스 제공을 위해 다음과 같은 개인정보를 수집합니다.</p>
@@ -56,108 +60,127 @@
         <table>
             <thead>
                 <tr>
+                    <th>구분</th>
                     <th>수집 항목</th>
-                    <th>수집 목적</th>
+                    <th>수집 방법</th>
                     <th>보유 기간</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>Google 계정 정보 (이름, 이메일, 프로필 사진)</td>
-                    <td>Google OAuth 로그인, 계정 생성 및 식별</td>
+                    <td><strong>회원가입</strong></td>
+                    <td>이메일 주소, 이름, 프로필 사진 (Google 계정 기반)</td>
+                    <td>Google OAuth 2.0</td>
                     <td>회원 탈퇴 시까지</td>
                 </tr>
                 <tr>
-                    <td>닉네임 / 소개글</td>
-                    <td>서비스 내 사용자 프로필 표시</td>
+                    <td><strong>프로필</strong></td>
+                    <td>자기소개, 보유 기기 목록, QA 경험, 전문 분야</td>
+                    <td>이용자 직접 입력</td>
                     <td>회원 탈퇴 시까지</td>
                 </tr>
                 <tr>
-                    <td>직무 · 스킬 · 관심 분야</td>
-                    <td>크루 매칭 및 프로젝트 추천</td>
-                    <td>회원 탈퇴 시까지</td>
+                    <td><strong>QA 활동</strong></td>
+                    <td>QA 의뢰 정보, 테스트 지원 내역, 버그 리포트, 채팅 메시지</td>
+                    <td>서비스 이용 중 자동 생성</td>
+                    <td>프로젝트 종료 후 1년</td>
                 </tr>
                 <tr>
-                    <td>프로젝트 정보 (제목, 설명, 모집 역할)</td>
-                    <td>크루 모집 서비스 제공</td>
-                    <td>프로젝트 삭제 시 또는 회원 탈퇴 시</td>
+                    <td><strong>결제·포인트</strong></td>
+                    <td>포인트 충전·사용·정산 내역 (카드번호 등 결제 수단 정보는 수집 안 함)</td>
+                    <td>서비스 이용 중 자동 생성</td>
+                    <td>5년 (전자상거래법)</td>
                 </tr>
                 <tr>
-                    <td>메시지 내용</td>
-                    <td>크루원 간 실시간 소통 서비스 제공</td>
-                    <td>발송 후 90일, 또는 삭제 요청 시</td>
-                </tr>
-                <tr>
-                    <td>기기 정보 (OS 버전, 앱 버전)</td>
-                    <td>서비스 최적화 및 오류 대응</td>
-                    <td>회원 탈퇴 시까지</td>
-                </tr>
-                <tr>
-                    <td>FCM 토큰 (푸시 알림 토큰)</td>
-                    <td>푸시 알림 발송</td>
+                    <td><strong>기기 정보</strong></td>
+                    <td>FCM 기기 토큰, OS 버전, 앱 버전</td>
+                    <td>앱 설치·실행 시 자동 수집</td>
                     <td>로그아웃 또는 토큰 갱신 시까지</td>
                 </tr>
                 <tr>
-                    <td>서비스 이용 기록</td>
-                    <td>서비스 품질 향상 및 통계 분석</td>
+                    <td><strong>위치 정보</strong></td>
+                    <td>대략적인 위치 (시·도 단위, QA 매칭 참고용)</td>
+                    <td>이용자 동의 후 수집 (선택)</td>
+                    <td>이용 목적 달성 시까지</td>
+                </tr>
+                <tr>
+                    <td><strong>이용 기록</strong></td>
+                    <td>앱 접속 이력, 서비스 이용 통계</td>
+                    <td>서비스 이용 중 자동 수집</td>
                     <td>수집 후 1년</td>
                 </tr>
             </tbody>
         </table>
 
-        <p><strong>수집 방법:</strong> Google OAuth 2.0을 통한 인증, 앱 내 이용자 직접 입력, 서비스 이용 중 자동 수집</p>
-
         <h2>제2조 (개인정보의 이용 목적)</h2>
         <p>수집한 개인정보는 다음 목적으로만 이용합니다.</p>
         <ul class="list-disc list-inside space-y-1 ml-2">
-            <li>Google OAuth 2.0을 통한 회원 가입 및 본인 인증</li>
-            <li>스타트업 크루 매칭 및 프로젝트 연결 서비스 제공</li>
-            <li>크루원 간 메시지 및 소통 서비스 제공</li>
-            <li>푸시 알림 발송</li>
-            <li>서비스 운영, 유지 및 개선</li>
-            <li>불법 이용 방지 및 서비스 안정성 확보</li>
-            <li>법령 의무 이행</li>
+            <li><strong>서비스 제공:</strong> 개발자·테스터 QA 매칭, QA 의뢰 등록 및 테스터 모집·선정</li>
+            <li><strong>회원 관리:</strong> 본인 확인, 계정 유지, 신뢰 점수(Trust Score) 산정</li>
+            <li><strong>결제 및 정산:</strong> 포인트 에스크로 처리, QA 완료 시 자동 정산</li>
+            <li><strong>커뮤니케이션:</strong> 프로젝트 채팅, 푸시 알림(신규 의뢰, 지원 현황, 완료 알림)</li>
+            <li><strong>서비스 개선:</strong> 이용 통계 분석, 오류 수정, 신규 기능 개발</li>
+            <li><strong>부정 이용 방지:</strong> 허위 리뷰, 이상 환불 등 부정 행동 탐지 및 차단</li>
+            <li><strong>법령 의무 이행:</strong> 관련 법령에 따른 기록 보존</li>
         </ul>
 
         <h2>제3조 (개인정보의 보유 및 이용 기간)</h2>
-        <p>회사는 개인정보 수집 목적이 달성된 후 해당 정보를 지체 없이 파기합니다. 단, 관계 법령에 따라 일정 기간 보존이 필요한 경우 해당 기간 동안 보관합니다.</p>
-        <ul class="list-disc list-inside space-y-1 ml-2">
-            <li><strong>전자상거래 계약 및 청약 철회 기록:</strong> 5년 (전자상거래법)</li>
-            <li><strong>소비자 불만 및 분쟁 처리 기록:</strong> 3년 (전자상거래법)</li>
-            <li><strong>통신 비밀 보호를 위한 통신 사실 확인 자료:</strong> 3개월 (통신비밀보호법)</li>
-        </ul>
+        <p>회사는 개인정보 수집 목적이 달성된 후 해당 정보를 지체 없이 파기합니다. 단, 관계 법령에 따라 아래 기간 동안 보존합니다.</p>
+        <table>
+            <thead>
+                <tr>
+                    <th>항목</th>
+                    <th>보유 기간</th>
+                    <th>근거 법령</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>전자상거래 계약·청약 철회 기록</td>
+                    <td>5년</td>
+                    <td>전자상거래법 제6조</td>
+                </tr>
+                <tr>
+                    <td>소비자 불만 및 분쟁 처리 기록</td>
+                    <td>3년</td>
+                    <td>전자상거래법 제6조</td>
+                </tr>
+                <tr>
+                    <td>통신 사실 확인 자료</td>
+                    <td>3개월</td>
+                    <td>통신비밀보호법 제15조의2</td>
+                </tr>
+            </tbody>
+        </table>
 
         <h2>제4조 (개인정보의 제3자 제공)</h2>
-        <p>회사는 이용자의 개인정보를 제1조에서 명시한 목적 범위 내에서만 이용하며, 이용자의 동의 없이 제3자에게 제공하지 않습니다. 단, 다음의 경우는 예외로 합니다.</p>
+        <p>회사는 원칙적으로 이용자의 개인정보를 제3자에게 제공하지 않습니다. 단, 아래의 경우는 예외입니다.</p>
         <ul class="list-disc list-inside space-y-1 ml-2">
             <li>이용자가 사전에 동의한 경우</li>
-            <li>법령에 특별한 규정이 있는 경우</li>
-            <li>수사 목적으로 법령에 정해진 절차와 방법에 따라 수사 기관의 요청이 있는 경우</li>
+            <li>법령에 특별한 규정이 있거나 수사기관의 적법한 요청이 있는 경우</li>
         </ul>
 
         <h2>제5조 (개인정보 처리의 위탁)</h2>
-        <p>회사는 서비스 제공을 위해 다음과 같이 개인정보 처리 업무를 외부에 위탁합니다.</p>
+        <p>회사는 원활한 서비스 제공을 위해 아래와 같이 개인정보 처리를 위탁합니다. 각 수탁자는 위탁 계약에 따라 개인정보를 안전하게 관리합니다.</p>
         <table>
             <thead>
                 <tr>
                     <th>수탁 업체</th>
                     <th>위탁 업무 내용</th>
+                    <th>개인정보처리방침</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>Google LLC</td>
-                    <td>Google OAuth 2.0 인증, Firebase 인증, FCM 푸시 알림, 클라우드 인프라</td>
-                </tr>
-                <tr>
-                    <td>Amazon Web Services (AWS)</td>
-                    <td>데이터 저장 (S3), 서버 호스팅</td>
+                    <td>Google OAuth 인증, Firebase 인증·푸시 알림·오류 수집, Google Maps</td>
+                    <td><a href="https://policies.google.com/privacy" target="_blank" rel="noopener">Google 정책</a></td>
                 </tr>
             </tbody>
         </table>
 
         <h2>제6조 (Google OAuth 2.0 사용에 관한 사항)</h2>
-        <p>본 서비스는 Google OAuth 2.0을 통한 소셜 로그인을 제공합니다. Google 계정을 통해 로그인 시 다음 정보에 접근하며, 각 항목은 명시된 목적으로만 사용됩니다.</p>
+        <p>본 서비스는 Google OAuth 2.0을 통한 소셜 로그인을 제공합니다. Google 계정으로 로그인 시 아래 정보에만 접근하며, 명시된 목적으로만 사용합니다.</p>
         <table>
             <thead>
                 <tr>
@@ -168,7 +191,7 @@
             <tbody>
                 <tr>
                     <td>이메일 주소</td>
-                    <td>계정 식별 및 서비스 알림</td>
+                    <td>계정 식별 및 서비스 알림 발송</td>
                 </tr>
                 <tr>
                     <td>이름</td>
@@ -180,66 +203,94 @@
                 </tr>
             </tbody>
         </table>
-        <p>Google 계정 정보는 제3자에게 제공되지 않으며, 서비스 탈퇴 시 즉시 삭제됩니다. Google의 개인정보 처리 방침은 <a href="https://policies.google.com/privacy" target="_blank" rel="noopener">policies.google.com/privacy</a>에서 확인하실 수 있습니다.</p>
+        <p>Google 계정 정보는 제3자에게 제공되지 않으며, 회원 탈퇴 시 즉시 삭제됩니다. Google의 개인정보처리방침은 <a href="https://policies.google.com/privacy" target="_blank" rel="noopener">policies.google.com/privacy</a>에서 확인하실 수 있습니다.</p>
 
-        <h2>제7조 (이용자 및 법정대리인의 권리와 그 행사 방법)</h2>
-        <p>이용자는 언제든지 다음 권리를 행사할 수 있습니다.</p>
-        <ul class="list-disc list-inside space-y-1 ml-2">
-            <li>개인정보 열람 요청</li>
-            <li>개인정보 정정·삭제 요청</li>
-            <li>개인정보 처리 정지 요청</li>
-            <li>회원 탈퇴 (계정 삭제)</li>
-        </ul>
-        <p class="mt-3">권리 행사는 앱 내 설정 메뉴 또는 이메일(<a href="mailto:iyu974895@gmail.com">iyu974895@gmail.com</a>)을 통해 요청하실 수 있습니다. 회사는 요청 접수 후 10일 이내에 처리합니다.</p>
-
-        <h2>제8조 (개인정보의 파기 절차 및 방법)</h2>
-        <p>회사는 개인정보 보유 기간이 경과하거나 처리 목적이 달성된 경우 다음 방법으로 개인정보를 파기합니다.</p>
-        <ul class="list-disc list-inside space-y-1 ml-2">
-            <li><strong>전자적 파일 형태:</strong> 복구 및 재생이 불가능한 방법으로 영구 삭제</li>
-            <li><strong>종이 문서:</strong> 분쇄 또는 소각</li>
-        </ul>
-
-        <h2>제9조 (개인정보의 안전성 확보 조치)</h2>
-        <ul class="list-disc list-inside space-y-1 ml-2">
-            <li>개인정보 접근 권한의 최소화 및 관리</li>
-            <li>Google OAuth 2.0 표준 인증 프로토콜 사용</li>
-            <li>네트워크 통신 구간 암호화 (TLS/HTTPS)</li>
-            <li>해킹 등 외부 침입 탐지 및 차단 시스템 운영</li>
-        </ul>
-
-        <h2>제10조 (개인정보 보호 책임자)</h2>
+        <h2>제7조 (앱 접근 권한 안내)</h2>
+        <p>앱 이용 중 아래 권한을 요청할 수 있습니다. 선택 권한은 허용하지 않아도 핵심 서비스를 이용할 수 있습니다.</p>
         <table>
             <thead>
                 <tr>
-                    <th>구분</th>
-                    <th>내용</th>
+                    <th>권한</th>
+                    <th>필수 여부</th>
+                    <th>이용 목적</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>개인정보 보호 책임자</td>
-                    <td>dcode labs 대표</td>
+                    <td>인터넷 접속</td>
+                    <td>필수</td>
+                    <td>서비스 서버 통신</td>
                 </tr>
                 <tr>
-                    <td>이메일</td>
-                    <td><a href="mailto:iyu974895@gmail.com">iyu974895@gmail.com</a></td>
+                    <td>카메라</td>
+                    <td>선택</td>
+                    <td>프로필 사진 직접 촬영</td>
                 </tr>
                 <tr>
-                    <td>홈페이지</td>
-                    <td><a href="https://dcode-labs.com/">https://dcode-labs.com/</a></td>
+                    <td>사진·미디어 라이브러리</td>
+                    <td>선택</td>
+                    <td>프로필 사진 선택 및 업로드</td>
+                </tr>
+                <tr>
+                    <td>위치 (사용 중일 때)</td>
+                    <td>선택</td>
+                    <td>QA 매칭 시 지역 필터링 참고</td>
+                </tr>
+                <tr>
+                    <td>알림 (푸시)</td>
+                    <td>선택</td>
+                    <td>QA 의뢰·지원·완료 알림 수신</td>
                 </tr>
             </tbody>
         </table>
 
-        <h2>제11조 (개인정보 처리방침의 변경)</h2>
-        <p>이 개인정보처리방침은 법령, 정부 지침, 또는 서비스 변경으로 인해 수정될 수 있습니다. 중요한 변경 사항이 있을 경우 앱 내 공지 또는 이메일을 통해 사전에 안내합니다.</p>
-
-        <h2>제12조 (권익 침해에 대한 구제 방법)</h2>
+        <h2>제8조 (이용자의 권리와 행사 방법)</h2>
+        <p>이용자는 언제든지 아래 권리를 행사할 수 있습니다.</p>
         <ul class="list-disc list-inside space-y-1 ml-2">
-            <li>개인정보 침해신고센터: privacy.kisa.or.kr / 국번 없이 118</li>
-            <li>개인정보 분쟁조정위원회: www.kopico.go.kr / 1833-6972</li>
-            <li>대검찰청 사이버범죄수사단: www.spo.go.kr / 02-3480-3573</li>
-            <li>경찰청 사이버안전국: cyberbureau.police.go.kr / 국번 없이 182</li>
+            <li><strong>열람 요청:</strong> 본인의 개인정보 처리 현황 확인</li>
+            <li><strong>정정 요청:</strong> 부정확한 개인정보 수정</li>
+            <li><strong>삭제 요청:</strong> 개인정보 삭제 (회원 탈퇴 포함)</li>
+            <li><strong>처리 정지 요청:</strong> 개인정보 이용 중단</li>
+        </ul>
+        <p class="mt-3">권리 행사는 <strong>앱 내 설정 &gt; 계정 &gt; 회원탈퇴</strong> 또는 아래 이메일로 요청하시면 10일 이내에 처리합니다.</p>
+
+        <h2>제9조 (개인정보의 파기 절차 및 방법)</h2>
+        <ul class="list-disc list-inside space-y-1 ml-2">
+            <li><strong>파기 절차:</strong> 보유 기간 경과 또는 목적 달성 시 지체 없이 파기합니다.</li>
+            <li><strong>전자적 파일:</strong> 복구·재생이 불가능한 방법으로 영구 삭제합니다.</li>
+            <li><strong>종이 문서:</strong> 분쇄 또는 소각합니다.</li>
+        </ul>
+
+        <h2>제10조 (개인정보의 안전성 확보 조치)</h2>
+        <ul class="list-disc list-inside space-y-1 ml-2">
+            <li>개인정보 접근 권한의 최소화 및 관리</li>
+            <li>Google OAuth 2.0 표준 인증 프로토콜 사용</li>
+            <li>네트워크 통신 구간 암호화 (TLS/HTTPS)</li>
+            <li>Firebase Crashlytics를 통한 앱 오류 모니터링 및 대응</li>
+        </ul>
+
+        <h2>제11조 (개인정보 보호책임자)</h2>
+        <p>개인정보 관련 문의, 불만, 피해구제 신청은 아래로 연락해 주세요.</p>
+        <ul class="list-disc list-inside space-y-1 ml-2">
+            <li><strong>책임자:</strong> dcode labs 대표</li>
+            <li><strong>이메일:</strong> <a href="mailto:iyu974895@gmail.com">iyu974895@gmail.com</a></li>
+            <li><strong>홈페이지:</strong> <a href="https://dcode-labs.com/">https://dcode-labs.com/</a></li>
+        </ul>
+
+        <h2>제12조 (권익침해 구제 방법)</h2>
+        <p>개인정보 침해로 인한 피해 구제를 위해 아래 기관에 분쟁 해결이나 상담을 신청할 수 있습니다.</p>
+        <ul class="list-disc list-inside space-y-1 ml-2">
+            <li><strong>개인정보 침해신고센터:</strong> <a href="https://privacy.kisa.or.kr" target="_blank" rel="noopener">privacy.kisa.or.kr</a> (국번 없이 118)</li>
+            <li><strong>개인정보 분쟁조정위원회:</strong> <a href="https://www.kopico.go.kr" target="_blank" rel="noopener">www.kopico.go.kr</a> (1833-6972)</li>
+            <li><strong>대검찰청 사이버범죄수사단:</strong> <a href="https://www.spo.go.kr" target="_blank" rel="noopener">www.spo.go.kr</a> (02-3480-3573)</li>
+            <li><strong>경찰청 사이버안전국:</strong> <a href="https://cyberbureau.police.go.kr" target="_blank" rel="noopener">cyberbureau.police.go.kr</a> (국번 없이 182)</li>
+        </ul>
+
+        <h2>제13조 (개인정보처리방침의 변경)</h2>
+        <ul class="list-disc list-inside space-y-1 ml-2">
+            <li>본 방침은 법령 변경 또는 서비스 변경에 따라 개정될 수 있습니다.</li>
+            <li>변경 시 앱 내 공지 및 본 페이지를 통해 최소 7일 전에 안내합니다.</li>
+            <li>중요한 변경 사항의 경우 30일 전에 공지합니다.</li>
         </ul>
 
         <div class="mt-12 pt-8 border-t text-sm" style="border-color: #EEF2FF; color: #9CA3AF">
