--- a/keeps/index.html
+++ b/keeps/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Keeps - 부동산 계약서를 안전하게 보관하는 앱. 암호화 PDF 저장, 갱신 알림, 스마트 계약서 관리">
-    <title>Keeps - 부동산 계약서 관리</title>
+    <title>Keeps - 부동산 계약서 관리(암호, PDF)</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
